# rustnote

./: README.md
001/: comments.rs  debug.rs  formatted_print.rs  test_case_list.rs
002/: arrays_slices  arrays_slices.rs  literals_operators  primitives  tuples  tuples.rs
003/: c_like  c_like.rs  contants  enums  enums.rs  linked_list  structures  use
004/: declare_first.rs  scope_shadowing.rs
005/: aliasing.rs
006/: into.rs
007/: expressions.rs
008/: for_iter.rs  guard.rs  if_else.rs  if_let.rs  if_let_enum.rs  match_enum.rs  pointers_ref.rs  returning.rs  while.rs
009/: capturing_move.rs  cloures.rs  input_functions.rs
010/: mod_visibility.rs  struct_visibility.rs
011/: executable.rs
013/: build.sh  cfg.rs  dead_code.rs
014/: multiple_bounds.rs  new_type_idiom.rs  the_problem.rs  where.rs
015/: borrowing.rs  coercion.rs  explict_annotation.rs  lifetimes_functions.rs  methods.rs  mutability.rs  static.rs  struct.rs
016/: clone.rs  derive.rs  drop.rs  iterators.rs
017/: DSL.rs  designator.rs  dry.sh  macro_rules.rs  overload.rs  variadic.rs
018/: boilerplate.rs  boxing_errors.rs  defining_an_error_type.rs  panic.rs  question_mark.rs  result.rs  result_map.rs
019/: result.rs  (+4 more)
blockchain_note/: Cargo.toml
blockchain_note/src/: main.rs
blockchain_note/static/: index.html
crud_note/: Cargo.toml
crud_note/migrations/2018-03-22-045633_users/: up.sql
crud_note/src/: db.rs  main.rs  schema.rs  user.rs
crud_note/test/: crud.http
microservice_note/: Cargo.toml
microservice_note/schemas/: message.sql
microservice_note/src/: main.rs
(+109 files in other folders)
