[package]
name = "blockchain_note"
version = "0.1.0"
authors = ["Zhong Wei <zhongwei99@163.com>"]

[dependencies]
rocket = "0.3"
rocket_codegen = "0.3"
rocket_contrib = "0.3"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
lazy_static = "1.0"
rust-crypto = "0.2"
chrono = "0.4"
url = "1.7"
reqwest = "0.8"
open = "1.2"