[package]
name = "crud_note"
version = "0.1.0"
authors = ["Zhong Wei <zhongwei99@163.com>"]

[dependencies]
rocket = "0.3"
rocket_codegen = "0.3"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
diesel = { version = "1.1", features = ["postgres"] }
diesel_codegen = { version = "*", features = ["postgres"] }
r2d2 = "*"
r2d2-diesel = "*"

[dependencies.rocket_contrib]
version = "*"
default-features = false
features = ["json"]