[package]
name = "microservice_note"
version = "0.1.0"
authors = ["Zhong Wei <zhongwei99@163.com>"]

[dependencies]
env_logger = "0.5"
futures = "0.1"
hyper = "0.11"
log = "0.4"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
diesel = { version = "1.1", features = ["postgres"] }
postgres = "0.15"
maud = "0.17"
syn = "0.12"
url = "1.7"